# bt_router_scraper

./: Dockerfile  Makefile  Readme.md  setup.cfg  setup.py
bt_router_scraper/: bt_router_scraper.py  emailer.py  html_table_parser.py
etc/bt_router_scraper/: conf.json
var/bt_router_scraper/config/: email_alerts.json
var/www/html/: getFriendlyNames.php  getHistoricalData.php  index.html  main.js  setFriendlyNames.php
