[metadata]
name=bt_router_scraper
version=1.0.0
description=BT Router scraper app
author = K.Goode
author-email =
license = 
url=https://github.com/KevinGoode/bt_router_scraper
python-requires = >=3.6
classifier =
    Environment :: CentOS
    Programming Language :: Python
    Development Status :: 3 - Alpha
    Natural Language :: English
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Operating System :: POSIX :: Linux
    Operating System :: Unix

[bdist_rpm]
pre-install = bin/pre_install
pre-uninstall = bin/pre_uninstall
post-install = bin/post_install
